some customer pages

--- a/Marketly/src/styles.css
+++ b/Marketly/src/styles.css
@@ -147,6 +147,132 @@ body {
     border-bottom: none;
 }
 
+.cart-wrapper {
+    position: relative;
+}
+
+.cart-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+    transition: color 0.2s;
+}
+
+.cart-button:hover {
+    color: #666;
+}
+
+.cart-icon {
+    width: 26px;
+    height: 26px;
+}
+
+.cart-dropdown {
+    position: absolute;
+    right: 0;
+    top: 70px;
+    width: 22rem;
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12);
+    padding: 12px;
+    z-index: 200;
+}
+
+/* CART ITEM CARD */
+.cart-item-card {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid #eee;
+    margin-bottom: 10px;
+}
+
+.cart-thumb {
+    width: 45px;
+    height: 45px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+
+.cart-item-info {
+    flex: 1;
+}
+
+.cart-item-name {
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0;
+}
+
+/* QTY CONTROLS */
+.qty-controls {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.qty-controls button {
+    width: 22px;
+    height: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    background: #f8f8f8;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.qty-controls button:hover {
+    background: #eaeaea;
+}
+
+.qty-number {
+    font-weight: bold;
+    min-width: 20px;
+    text-align: center;
+}
+
+/* MORE LINK */
+.cart-more-link {
+    display: block;
+    text-align: center;
+    padding-top: 8px;
+    font-size: 14px;
+    text-decoration: none;
+    color: #0f172a;
+    font-weight: 600;
+}
+
+.cart-more-link:hover {
+    text-decoration: underline;
+}
+
+.remove-btn {
+    background: none;
+    border: none;
+    font-size: 20px;
+    color: #888;
+    cursor: pointer;
+    margin-left: 8px;
+    transition: 0.2s;
+}
+
+.remove-btn:hover {
+    color: #c00;
+    transform: scale(1.1);
+}
+
 .main-container {
     min-height: 100vh;
     min-width: 100vw;
