--- a/Marketly/src/styles.css
+++ b/Marketly/src/styles.css
@@ -237,7 +237,8 @@ body {
 }
 
 /* Nav links */
-.top-nav a {
+.top-nav a,
+.top-nav button {
     text-decoration: none;
     color: #222;
     font-weight: 500;
@@ -246,7 +247,8 @@ body {
 }
 
 /* Hover */
-.top-nav a:hover {
+.top-nav a:hover,
+.top-nav button:hover {
     color: #7a2cff;
 }
 
@@ -441,7 +443,7 @@ body {
     height: 120px;
     background: #e7e7e7;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
 }
 
 /* OUT OF STOCK BADGE */
@@ -473,4 +475,17 @@ body {
 
 .emptymessage {
     font-size: 1.1rem;
+}
+
+.card-product-image {
+    width: 100%;
+}
+
+.logout-link {
+    background: none;
+    border: none;
+    padding: 0;
+    color: inherit;
+    font: inherit;
+    cursor: pointer;
 }
