--- a/Marketly/src/CustomerPages/catalog.css
+++ b/Marketly/src/CustomerPages/catalog.css
@@ -157,25 +157,28 @@
 }
 
 .modal-product-name {
-    font-size: 24px;
+    font-size: 2rem;
     font-weight: 700;
     color: #333;
+    margin: 0.3rem 0;
 }
 
 .modal-seller {
-    font-size: 16px;
+    font-size: 1.2rem;
     color: #666;
+    margin: 0;
+    margin-bottom: .5rem;
 }
 
 .modal-price {
     font-size: 28px;
     font-weight: 700;
     color: #4a90e2;
-    margin-bottom: 8px;
+    margin: 0;
 }
 
 .quantity-section {
-    margin: 24px 0;
+    margin: 1rem 0;
 }
 
 .quantity-label {
@@ -229,11 +232,11 @@
     color: white;
     border: none;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 1.15rem;
     font-weight: 600;
     cursor: pointer;
     transition: background-color 0.2s;
-    margin-top: 8px;
+    /* margin-top: 8px; */
 }
 
 .add-to-cart-btn:hover {
