--- a/Marketly/src/CustomerPages/cart.css
+++ b/Marketly/src/CustomerPages/cart.css
@@ -98,6 +98,12 @@
     font-size: 16px;
 }
 
+.quantity-display-static {
+    font-size: 16px;
+    color: #666;
+    padding: 0 0 1rem 0;
+}
+
 .cart-product-price {
     font-size: 18px;
     font-weight: bold;
@@ -194,11 +200,7 @@
     opacity: 0.6;
 } */
 
-.quantity-display-static {
-    font-size: 16px;
-    color: #666;
-    padding: 5px 15px;
-}
+
 
 .dropdown-section {
     background: white;
